<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/ltest" android:gravity="center_vertical"
		android:background="@drawable/uplay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/up_new" android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_centerVertical="true">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="horizontal" 
				android:layout_weight="7.5">
				<RelativeLayout android:layout_width="2.5dip" android:layout_height="fill_parent" android:id="@+id/uprelative" 
				android:layout_toLeftOf="@+id/up_text"></RelativeLayout>	
				<TextView 
				android:id="@+id/up_text" android:layout_width="wrap_content"
					android:textSize="@dimen/TOP_Font_Size" android:textColor="@color/title"
					android:layout_height="wrap_content" android:text="@string/app_name"
					android:layout_centerInParent="true">
				</TextView>
				
							<ImageView android:src="@drawable/up_icon" android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/uprelative" android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
			</RelativeLayout>
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="@string/importcontacttolocal_new_thirdimagebutton_relative_weight">
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>


	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest1"
		android:layout_weight="@string/mid_new" android:orientation="vertical"
		android:background="@drawable/midlay_new"
		android:layout_height="fill_parent">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_weight="@string/choosecontact_searchdevices_topbutton_layout_weight"
			android:orientation="horizontal" android:id="@+id/linearLayout1"
			android:layout_height="fill_parent">

			<RelativeLayout android:layout_width="fill_parent"
				android:id="@+id/linearLayout1" android:layout_weight="@string/choosecontact_searchdevices_topbutton_weight"
				android:layout_height="fill_parent">
				<ImageButton android:id="@+id/eee" android:onClick="onselectallbtn"
					android:layout_centerInParent="true" android:background="@color/touming"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:src="@drawable/selectall">
				</ImageButton>
			</RelativeLayout>

			<RelativeLayout android:layout_width="fill_parent"
				android:id="@+id/linearLayout1" android:layout_weight="@string/choosecontact_searchdevices_topbutton_weight"
				android:layout_height="fill_parent">
				<ImageButton android:id="@+id/sss" android:onClick="onnotselectallbtn"
					android:layout_centerInParent="true" android:background="@color/touming"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:src="@drawable/cancelselect">
				</ImageButton>
			</RelativeLayout>

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent" android:id="@+id/choosecontact_back"
			android:orientation="vertical" android:layout_weight="@string/choosecontact_searchdevices_list_layout_weight"
			android:layout_height="fill_parent">

			<ImageView android:layout_width="fill_parent" android:id="@+id/imageView1"
				android:layout_weight="@string/choosecontact_searchdevices_line_weight" android:src="@drawable/line"
				android:layout_height="fill_parent"></ImageView>

			<ScrollView android:id="@+id/widget34"
				android:layout_weight="@string/choosecontact_searchdevices_list_weight" android:layout_width="fill_parent"
				android:orientation="vertical" android:layout_height="fill_parent">
				<LinearLayout android:id="@+id/contactList"
					android:layout_width="fill_parent" android:orientation="vertical"
					android:layout_height="fill_parent">
				</LinearLayout>
			</ScrollView>

		</LinearLayout>

	</LinearLayout>




		<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest2"
		 android:orientation="horizontal"
		android:background="@drawable/downlay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/down_new">
			<RelativeLayout android:layout_width="fill_parent"	
		 android:layout_height="fill_parent" android:layout_weight="1">
		<ImageButton android:id="@+id/talkbutton"

				android:layout_centerInParent="true"
				android:onClick="onexporttolocalcancelbtn" android:background="@color/touming"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/back">
			</ImageButton>
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1">
		<ImageButton android:id="@+id/talkbutton1"
				android:layout_centerInParent="true"
				android:background="@color/touming" android:layout_width="wrap_content"
				android:onClick="onexporttolocalbtn" android:layout_height="wrap_content"
				android:src="@drawable/export">
			</ImageButton>
			</RelativeLayout>
		</LinearLayout>
</LinearLayout>
