<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/ltest_share" android:gravity="center_vertical"
		android:background="@drawable/uplay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/up_new" android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_centerVertical="true">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="horizontal" 
				android:layout_weight="7.5">
				<RelativeLayout android:layout_width="2.5dip" android:layout_height="fill_parent" android:id="@+id/uprelative_share" 
				android:layout_toLeftOf="@+id/up_text_share"></RelativeLayout>	
				<TextView 
				android:id="@+id/up_text_share" android:layout_width="wrap_content"
					android:textSize="@dimen/TOP_Font_Size" android:textColor="@color/title"
					android:layout_height="wrap_content" android:text="@string/app_name"
					android:layout_centerInParent="true">
				</TextView>
				
							<ImageView android:src="@drawable/up_icon" android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/uprelative_share" android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
			</RelativeLayout>
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="@string/importcontacttolocal_new_thirdimagebutton_relative_weight">
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>



	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest1_share"
		android:layout_weight="@string/mid_new" android:orientation="vertical"
		android:background="@drawable/midlay_new"
		android:layout_height="fill_parent">

<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_weight="@string/contactmove_toptext_weight">
<LinearLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:layout_weight="@string/contactmove_toptext_left_weight"></LinearLayout>

			<RelativeLayout android:layout_width="fill_parent"
				android:gravity="center_horizontal" android:layout_weight="@string/contactmove_toptext_right_weight"
				android:id="@+id/linearLayout1_share" android:layout_height="fill_parent">

				<LinearLayout android:layout_width="fill_parent"
					android:orientation="horizontal" android:id="@+id/contactnumlayout_share"
					android:layout_height="wrap_content"
					android:layout_alignParentLeft="true"
					android:layout_centerVertical="true">
					<TextView android:id="@+id/contactCountText_first_share" android:layout_width="wrap_content"
						android:textColor="@color/little" android:layout_height="wrap_content"
						android:textSize="@dimen/SUMMARY_Font_Size" android:text="@string/hascontacts">
					</TextView>
					<TextView android:id="@+id/contactCountText_share"
						android:layout_width="wrap_content" android:textColor="@color/little"
						android:layout_height="wrap_content" android:textSize="@dimen/SUMMARY_Font_Size"
						android:text="">
					</TextView>
				</LinearLayout>

				<LinearLayout android:layout_width="wrap_content"
					android:orientation="horizontal" android:layout_below="@id/contactnumlayout_share"
					android:id="@+id/timelayout_share" android:layout_height="wrap_content">
					<TextView android:id="@+id/lasttime_first_share" android:layout_width="wrap_content"
						android:textColor="@color/little" android:layout_height="wrap_content"
						android:textSize="@dimen/SUMMARY_Font_Size" android:text="@string/lasttimeop">
					</TextView>
					<TextView android:id="@+id/lasttime_share" android:layout_width="wrap_content"
						android:textColor="@color/little" android:layout_height="wrap_content"
						android:textSize="@dimen/SUMMARY_Font_Size" android:text="">
					</TextView>
				</LinearLayout>
			</RelativeLayout>

		</LinearLayout>
<LinearLayout android:layout_height="fill_parent" android:layout_weight="@string/contactmove_button_weight" android:gravity="center" android:layout_width="fill_parent" android:orientation="vertical" android:id="@+id/linearLayout1_share">
<ImageButton android:id="@+id/talkbutton_share_bt_send"
				android:onClick="onsharecontactsbluetoothsend" android:background="@color/touming"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/importcontact_local"
				android:layout_centerInParent="true">
			</ImageButton></LinearLayout>
			
			<LinearLayout android:layout_height="fill_parent" android:layout_weight="@string/contactmove_button_weight" android:gravity="center" android:layout_width="fill_parent" android:orientation="vertical" android:id="@+id/linearLayout1_share">
<ImageButton android:id="@+id/talkbutton_share_bt_receive"
				android:onClick="onsharecontactsbluetoothreceive" android:background="@color/touming"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/importcontact_local"
				android:layout_centerInParent="true">
			</ImageButton></LinearLayout>


		<LinearLayout android:layout_width="fill_parent" android:orientation="vertical"
		android:gravity="center_horizontal"
			android:layout_weight="@string/contactmove_button_weight"
			android:layout_height="fill_parent">
		<ImageButton android:id="@+id/talkbutton1_share_wifi_send" android:layout_centerInParent="true"
				android:background="@color/touming" android:layout_width="wrap_content"
				android:onClick="onsharecontactswifisend" android:layout_height="wrap_content"
				android:src="@drawable/exportcontact_local"
				>
			</ImageButton>
		</LinearLayout>
		
				<LinearLayout android:layout_width="fill_parent" android:orientation="vertical"
		android:gravity="center_horizontal"
			android:layout_weight="@string/contactmove_button_weight"
			android:layout_height="fill_parent">
		<ImageButton android:id="@+id/talkbutton1_share_wifi_receive" android:layout_centerInParent="true"
				android:background="@color/touming" android:layout_width="wrap_content"
				android:onClick="onsharecontactswifireceive" android:layout_height="wrap_content"
				android:src="@drawable/exportcontact_local"
				>
			</ImageButton>
		</LinearLayout>

	</LinearLayout>
		<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest2_share"
		 android:orientation="vertical"
		android:background="@drawable/downlay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/down_new">
			<RelativeLayout android:layout_width="fill_parent"	
		 android:layout_height="fill_parent" android:layout_weight="1.3">
		<TextView android:id="@+id/down_text_share" android:layout_centerInParent="true" android:layout_width="wrap_content" android:text="@string/down_text"
		android:layout_height="wrap_content" android:textSize="11dip" android:textColor="@color/down"/>
		
			
		<TextView android:id="@+id/down_text1_share" android:layout_centerHorizontal="true" android:layout_below="@+id/down_text_share" android:layout_width="wrap_content" android:text="@string/down_text1"
		android:layout_height="wrap_content" android:textSize="11dip" android:textColor="@color/down"/>
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.7"></RelativeLayout>
		</LinearLayout>
</LinearLayout>
