<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">


		<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/ltest" android:gravity="center_vertical"
		android:background="@drawable/uplay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/up_new" android:orientation="vertical">
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="horizontal" android:layout_height="wrap_content"
			android:layout_centerVertical="true">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:orientation="horizontal" 
				android:layout_weight="7.5">
				<RelativeLayout android:layout_width="2.5dip" android:layout_height="fill_parent" android:id="@+id/uprelative" 
				android:layout_toLeftOf="@+id/up_text"></RelativeLayout>	
				<TextView 
				android:id="@+id/up_text" android:layout_width="wrap_content"
					android:textSize="@dimen/TOP_Font_Size" android:textColor="@color/title"
					android:layout_height="wrap_content" android:text="@string/app_name"
					android:layout_centerInParent="true">
				</TextView>
				
							<ImageView android:src="@drawable/up_icon" android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/uprelative" android:layout_width="wrap_content"
				    android:layout_height="wrap_content"/>
			</RelativeLayout>
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="@string/importcontacttolocal_new_thirdimagebutton_relative_weight">
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>

	<!-- 中间部分-->
	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest1"
		android:layout_weight="@string/mid_new" android:orientation="vertical"
		android:background="@drawable/midlay_new"
		android:layout_height="fill_parent">
		<RelativeLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_weight="1"
			android:id="@+id/progresscontainer" android:layout_height="280dip">

			<ProgressBar android:id="@+id/cyclebar" style="?android:attr/progressBarStyle"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:visibility="gone" />

			<ProgressBar android:id="@+id/pbbar"
			android:layout_centerHorizontal="true"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="40dp" android:layout_marginRight="40dp"
				android:visibility="gone" />

		</RelativeLayout>


		<LinearLayout android:layout_width="fill_parent"
			android:layout_gravity="center_horizontal" android:paddingTop="20dip"
			android:layout_weight="4" android:id="@+id/linearLayout1"
			android:orientation="horizontal" android:layout_height="wrap_content">
			<!--  <ImageButton android:id="@+id/num11_OkButton"
				android:paddingLeft="60dip" android:paddingTop="20dip"
				android:background="@color/touming" android:layout_width="wrap_content"
				android:onClick="onbackbtn" android:layout_height="wrap_content"
				android:src="@drawable/back_3">
			</ImageButton>
			-->
		</LinearLayout>


	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:id="@+id/ltest2"
		 android:orientation="vertical"
		android:background="@drawable/downlay_new" android:layout_height="fill_parent"
		android:layout_weight="@string/down_new">
			<RelativeLayout android:layout_width="fill_parent"	
		 android:layout_height="fill_parent" android:layout_weight="1.3">
		<TextView android:id="@+id/down_text" android:layout_centerInParent="true" android:layout_width="wrap_content" android:text="@string/down_text"
		android:layout_height="wrap_content" android:textSize="11dip" android:textColor="@color/down"/>
		
			
		<TextView android:id="@+id/down_text1" android:layout_centerHorizontal="true" android:layout_below="@+id/down_text" android:layout_width="wrap_content" android:text="@string/down_text1"
		android:layout_height="wrap_content" android:textSize="11dip" android:textColor="@color/down"/>
		</RelativeLayout>
		<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.7"></RelativeLayout>
		</LinearLayout>


</LinearLayout>